--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             </div>
         </header>
         <div class="container">
-            <div class="conteudo">
-                <h1>Por que os endocrinologistas estão tão entusiasmados com esse creme de aplicação local?</h1>
+            
+                <h1>Por que os endócrinos estão tão entusiasmados com esse creme de aplicação local?</h1>
                 <h3>Esse avanço tecnológico pode ajudar as pessoas a se manterem em movimento sem dores no joelho. Confira nossa análise.</h2>
-                <p>Por Sandro Pedroso, G9</p>
-                <p>20/01/2022 - Atualizado há duas horas</p>
+                <p class="autor">Por Sandro Pedroso, G9</p>
+                <p class="data">20/01/2022 - Atualizado há duas horas</p>
+            
+            <div class="conteudo">
                 <div class="foto_corpo_materia">
                     <a href="index.html">
                         <img src="foto.PNG">
@@ -34,14 +36,14 @@
                 <h2>Subtítulo</h2>
                 <p>Matéria</p>
             </div>
-            <div class="Publicidade">
-                <p>CONTINUA DEPOIS DA PUBLICIDADE</p>
+            <div class="publicidade">
+            <hr>
                 <a href="index.html">
                     <img src="foto.PNG">
                 </a>
                 <p>ATUALIAÇÃO: Desde que o produto...</p>
             </div>
-            <div id="area-comentario">
+            <div class="area-comentario">
                 <h2>Comentários</h2>
                 <P>Os comentários são de responsabilidade exclusiva de seus autores e não representam a opinião deste site. Se achar algo que viole os termos de uso, denuncie. Leia as perguntas mais frequentes para saber o que é impróprio ou ilegal.</P>
                     <div id="comentario">
