--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 <br />    
                 <div class="links">
                     <h2>Links Úteis</h2>
-                        <a href="">Termos de Uso</a><br />
-                        <a href="">Política de Privacidade</a><br />
-                        <a href="">Contato</a><br />
+                        <a href="">Termos de Uso</a>
+                        <a href="">Política de Privacidade</a>
+                        <a href="">Contato</a>
                 </div>
                 <br />
                 <br />
